wip: wasm init from codex
Prompt:

Below is a single, self‑contained prompt you can paste into Codex CLI. It tells the agent exactly what to do to implement Plan B: a native WebAssembly SIMD backend for VAMP, wire it into the build, and prove it works with a small smoke test.

---

**Codex CLI prompt**

You are working in my fork of [https://github.com/KavrakiLab/vamp](https://github.com/KavrakiLab/vamp). Implement a native WebAssembly SIMD backend and make the project build with Emscripten. Use the steps and acceptance criteria below. Do not ask me questions. Make reasonable assumptions and iterate until the build is green.

### Goal

Add a `vector/wasm.hh` backend using `wasm_simd128.h`, enable it automatically when building under Emscripten with SIMD, then produce a minimal Node runnable smoke test that exercises the vector layer through at least one top level VAMP function that uses the vector backend on hot paths. Commit your changes as a single PR.

### Constraints

* No Python bindings for this target. C++ only.
* Use native Wasm SIMD intrinsics from `<wasm_simd128.h>`. Do not use emulation unless the compiler lacks SIMD support.
* Keep the public vector API identical to the existing AVX and NEON backends so the rest of the code compiles unchanged.
* If some ops in AVX/NEON are not used anywhere, you do not have to implement them now. Implement what the build requires, then add any obvious missing basics.
* Keep exception behavior the same as in other backends.
* Coding style, license headers, and namespaces must match the project.

### High level plan

1. Discover the vector abstraction:

* Find where the vector backend is selected and how the interface looks.

  * Run: `git grep -n "vector/avx"`, `git grep -n "vector/neon"`, `git grep -n "namespace .*vector"`, and `git grep -n "VAMP_USE_AVX\|VAMP_USE_NEON"`.
* Open `vector.hh`, `vector/avx.hh`, `vector/neon.hh` or their actual locations. Identify:

  * Core float vector type (likely 8-wide), mask type, and 

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,14 @@ include(CompilerSettings)
 include(FetchInitCPM)
 include(Dependencies)
 
+# Emscripten + Wasm SIMD configuration
+if(EMSCRIPTEN)
+  add_compile_options(-msimd128 -mrelaxed-simd)
+  add_link_options(-msimd128 -mrelaxed-simd)
+  # Disable Python bindings for wasm builds
+  set(VAMP_BUILD_PYTHON_BINDINGS OFF CACHE BOOL "" FORCE)
+endif()
+
 # Create VAMP C++ library
 add_library(vamp_cpp INTERFACE)
 
