added new test we are missing implementation of some SIMDVector methods like sin, cos log etc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,21 @@ if(EMSCRIPTEN)
   )
   target_link_libraries(vamp_wasm_smoke PRIVATE vamp_cpp)
   set_target_properties(vamp_wasm_smoke PROPERTIES OUTPUT_NAME vamp_smoke SUFFIX ".mjs")
+  add_executable(vamp_wasm_planning src/impl/vamp/bindings/wasm_planning.cc)
+  # Emscripten flags: ES module, no filesystem, export smoke and cwrap for script
+  target_link_options(vamp_wasm_planning PRIVATE
+    "SHELL:-s EXPORTED_FUNCTIONS=['_vamp_wasm_planning']"
+    "SHELL:-s EXPORTED_RUNTIME_METHODS=['cwrap']"
+    "SHELL:-s MODULARIZE=1"
+    "SHELL:-s EXPORT_ES6=1"
+    "SHELL:-s ENVIRONMENT=web,worker,node"
+    "SHELL:-s INITIAL_MEMORY=67108864"
+    "SHELL:-s ALLOW_MEMORY_GROWTH=1"
+    "SHELL:-s FILESYSTEM=0"
+    -O3
+  )
+  target_link_libraries(vamp_wasm_planning PRIVATE vamp_cpp)
+  set_target_properties(vamp_wasm_planning PROPERTIES OUTPUT_NAME vamp_planning SUFFIX ".mjs")
 endif()
 
 # Create VAMP C++ library
